--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,8 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v13.0" nonce="dKVI51Yd"></script>
     <div id="root"></div>
     
   </body>
